# VERTA

./: .gitignore  GUI_README.md  INTENT_RECOGNITION.md  LICENSE  MANIFEST.in  README.md  exemplary commands.txt  launch_gui.py  pyproject.toml  ra_gui_launcher.py  requirements_gui.txt  route_analyzer_backup.py  setup.py
examples_intent/: README.md
gui/: README.md  launch.py
project/: GUI_README.md  INTENT_RECOGNITION.md  README.md  launch_gui.py  pyproject.toml  ra_commands.py  ra_commands_enhanced.py  ra_commands_intent.py  ra_commands_predict.py  ra_consistency.py  ra_data_loader.py  ra_decisions.py  ra_gaze.py  ra_gui.py  ra_intent_recognition.py  ra_prediction.py  ra_validation.py  requirements_gui.txt  route_analyzer.py
route_analyzer/: ra_commands.py  ra_decisions.py  ra_intent_recognition.py  ra_prediction.py
src/route_analyzer_ruedi99ms/: __init__.py  __main__.py  ra_gaze.py  ra_gui.py  ra_metrics.py  ra_plotting.py  ra_progress.py
tests/: README.md
