[project]
name = "route-analyzer"
version = "0.1.0"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0", 
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
yaml = ["pyyaml"]
parquet = ["pyarrow"]
gui = ["streamlit>=1.28.0", "plotly>=5.15.0"]

[project.scripts]
route-analyzer = "route_analyzer:main"